Fix T85562: Remove Win32 RIM_INPUTSINK

Removal of Win32 code that allows background windows to receive raw input.

Differential Revision: https://developer.blender.org/D10408

Reviewed by Brecht Van Lommel